maquetacion y un poco de sass

--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,43 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: 0;
+}
+
+body {
+  background-image: url(../assets/img/catbackground.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 header {
-  background-color: blue;
+  background-color: rgba(0, 0, 153, 0.829);
 }
 header div {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
 }
-header div a {
+header div nav ul {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-decoration: none;
+  gap: 1rem;
   color: white;
 }
-header nav ul {
-  background-color: yellow;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-header nav ul li {
-  list-style: none;
-}
-header nav ul li a {
-  text-decoration: none;
+
+.active {
+  color: rgb(99, 99, 126);
   font-weight: bold;
-  font-size: 50px;
+}
+
+.title {
+  font-size: 6rem;
+  font-weight: bold;
+}
+
+.marcas {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
