--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,32 +1,21 @@
 header{
-    background-color: blue;
+    background-color: rgba(0, 0, 153, 0.829);
     div{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        a{
+    display:flex;
+    justify-content: space-around;
+
+        nav{
+            ul{
             display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            text-decoration: none;
+            gap:1rem;
             color: white;
         }
-    }
-    nav{
-        ul{
-            background-color: yellow;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            li{
-                list-style: none;
-                a{
-                    text-decoration: none;
-                    font-weight: bold;
-                    font-size: 50px;
-                }
-            }
-        }
-    }
+    };
 }
+}
+
+.active{
+    color: rgb(99, 99, 126);
+    font-weight: bold;
+}
+
