--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,7 @@
-@import "./layout/header"
+
+@import "./global/reset";
+@import "./layout/body";
+@import "./layout/header";
+@import "./layout/main";
+
+
