--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,5 +3,10 @@
 @import "./layout/body";
 @import "./layout/header";
 @import "./layout/main";
+@import "./layout/banner1";
+@import "./layout/section1";
+@import "./layout/banner2";
+@import "./layout/brands";
+@import "./layout/footer";
 
 
