--- a/scss/global/reset.scss
+++ b/scss/global/reset.scss
@@ -3,3 +3,5 @@
     margin: 0;
     box-sizing: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap');
+
