--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,6 +1,3 @@
 body{
-    background-image: url(../assets/img/catbackground.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    font-family: 'Roboto', sans-serif;
 }
