--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,16 +1,38 @@
 header{
-    background-color: rgba(0, 0, 153, 0.829);
+    background-color: rgba(14, 14, 105, 0.877);
+    top: 0;
+    position: sticky;
+    margin-bottom: 1.875rem;
+    border-bottom: solid 3px rgba(11, 11, 143, 0.726);
     div{
+    padding: .625rem;
     display:flex;
     justify-content: space-around;
-
+    align-items: center;
+    color: white;
+    input{
+        border-radius: .625rem;
+        padding: 0rem .625rem;
+    }
         nav{
             ul{
             display: flex;
             gap:1rem;
             color: white;
+            font-size: 1.5625rem;
+            font-weight: bold;
+            a{
+                padding: .625rem;
+                border-radius: .625rem;
+            }
+            a:hover{
+                transition-duration: 1s;
+                color: yellow;
+                background-color: rgba(0, 0, 102, 0.747);
+                
+            }
         }
-    };
+    }
 }
 }
 
