--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,10 +1,8 @@
 .title{
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 6rem;
     font-weight: bold;
 }
 
-.marcas{
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-}
+
+
