--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -7,6 +7,7 @@ footer{
     background-color: rgba(14, 14, 105, 0.808);
     align-items: center;
     margin-top: 1.875rem;
+    flex-wrap: wrap;
     div{
         div{
             display: flex;
