--- a/scss/layout/_section1.scss
+++ b/scss/layout/_section1.scss
@@ -10,8 +10,8 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        background-color: rgb(18, 0, 83);
-        border: solid 8px rgb(18, 0, 83);
+        background-color: rgba(18, 0, 83, 0.658);
+        border: solid 8px rgba(18, 0, 83, 0.151);
         border-radius: 10px;
         color: white;
         font-size: 1.875rem;
