--- a/css/style.css
+++ b/css/style.css
@@ -253,24 +253,55 @@ footer div img:hover {
 }
 @media all and (max-width: 425px) {
   header {
-    flex-direction: column;
     font-size: 0.9375rem;
   }
+  header div {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  header div .nav {
+    gap: 0.0625rem;
+  }
   header input {
-    width: 7vh;
+    width: 10vh;
   }
   header img {
     width: 5vh;
   }
+  header .logo {
+    display: flex;
+    justify-content: center;
+    width: 10vh;
+  }
+  header .icons {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+  }
+  header .icons a {
+    font-size: 12px;
+    text-align: center;
+  }
+  header .icons img {
+    display: flex;
+    width: 3vh;
+    translate: 13px;
+  }
   .title {
-    font-size: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 4rem;
+    text-align: center;
+    line-height: 3.3125rem;
   }
   .banner1 {
-    width: 70%;
-    font-size: 3rem;
+    width: 90%;
+    font-size: 2.5rem;
+    line-height: 3.1125rem;
   }
   .banner1 img {
-    width: 18vh;
+    width: 16vh;
   }
   .section1 {
     flex-wrap: wrap;
@@ -280,11 +311,14 @@ footer div img:hover {
     font-size: 1.25rem;
   }
   .banner2 {
-    width: 70%;
-    font-size: 3rem;
+    width: 90%;
+    font-size: 2.5rem;
+    gap: 10px;
   }
   .brands {
     width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2, 4fr);
   }
   footer {
     text-align: center;
