--- a/scss/layout/_mediaQ425px.scss
+++ b/scss/layout/_mediaQ425px.scss
@@ -1,22 +1,54 @@
 @media all and (max-width: 425px){
     header{
-        flex-direction: column;
+        div{
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .nav{
+                gap: .0625rem;
+            }
+        }
+        
         font-size: .9375rem;
         input{
-            width: 7vh;
+            width: 10vh;
         }
         img{
             width: 5vh;
         }
+.logo{
+    display: flex;
+    justify-content: center;
+    width: 10vh;
+}
+.icons{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    a{
+        font-size: 12px;
+        text-align: center;
+    }
+    img{
+        display: flex;
+        width: 3vh;
+        translate: 13px;
+    }
+}
 }
 .title{
-    font-size: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 4rem;
+    text-align: center;
+    line-height: 3.3125rem;
 }
 .banner1{
-    width: 70%;
-    font-size: 3rem;
+    width: 90%;
+    font-size: 2.5rem;
+    line-height: 3.1125rem;
     img{
-        width: 18vh;
+        width: 16vh;
     }
 }
 .section1{
@@ -28,11 +60,14 @@
     }
 }
 .banner2{
-    width: 70%;
-    font-size: 3rem;
+    width: 90%;
+    font-size: 2.5rem;
+    gap: 10px;
 }
 .brands{
     width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2,4fr)
 }
 footer{
     text-align: center;
