index madiaQ fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,4 +13,4 @@
 @import "./layout/mediaQ1024px";
 @import "./layout/mediaQ768px";
 @import "./layout/mediaQ425px";
-
+@import "./layout/mediaQ320px";
