--- a/css/style.css
+++ b/css/style.css
@@ -330,5 +330,87 @@ footer div img:hover {
     width: 5vh;
   }
 }
+@media all and (max-width: 425px) {
+  header {
+    font-size: 0.9375rem;
+  }
+  header div {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  header div .nav {
+    gap: 0.0625rem;
+  }
+  header div .nav a {
+    font-size: 0.75rem;
+  }
+  header input {
+    width: 10vh;
+  }
+  header img {
+    width: 5vh;
+  }
+  header .logo {
+    display: flex;
+    justify-content: center;
+    width: 10vh;
+  }
+  header .icons {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+  }
+  header .icons a {
+    font-size: 12px;
+    text-align: center;
+  }
+  header .icons img {
+    display: flex;
+    width: 3vh;
+    translate: 13px;
+  }
+  .title {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 4rem;
+    text-align: center;
+    line-height: 3.3125rem;
+  }
+  .banner1 {
+    width: 90%;
+    font-size: 2rem;
+    line-height: 3.0005rem;
+  }
+  .banner1 img {
+    width: 10vh;
+  }
+  .section1 {
+    flex-wrap: wrap;
+  }
+  .section1 article {
+    width: 10vh;
+    font-size: 1.25rem;
+  }
+  .banner2 {
+    width: 90%;
+    font-size: 2.5rem;
+    gap: 10px;
+  }
+  .brands {
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2, 4fr);
+  }
+  footer {
+    text-align: center;
+    flex-direction: column;
+    gap: 1.875rem;
+    font-size: 1.5625rem;
+  }
+  footer img {
+    width: 5vh;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
