--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ header div nav ul a:hover {
   flex-direction: column;
   text-align: center;
   background-color: rgba(18, 0, 83, 0.658);
-  border: solid 8px rgba(18, 0, 83, 0.151);
+  border: solid 4px rgba(18, 0, 83, 0.151);
   border-radius: 10px;
   color: white;
   font-size: 1.875rem;
@@ -407,6 +407,58 @@ footer div img:hover {
     flex-direction: column;
     gap: 1.875rem;
     font-size: 1.5625rem;
+  }
+  footer img {
+    width: 5vh;
+  }
+}
+@media all and (max-width: 178px) {
+  header div {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  header div .nav {
+    display: grid;
+    grid-template-columns: repeat(2, 4fr);
+    gap: 0.0225rem;
+  }
+  header div .nav a {
+    font-size: 10px;
+  }
+  .title {
+    font-size: 3rem;
+  }
+  .banner1 {
+    width: 90%;
+    font-size: 30px;
+    line-height: 2.0005rem;
+    text-align: center;
+  }
+  .banner1 img {
+    display: none;
+  }
+  .banner2 {
+    width: 90%;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .brands-title {
+    font-size: 1.25rem;
+  }
+  .brands {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(2, 4fr);
+  }
+  .brands img {
+    width: 15vh;
+  }
+  footer {
+    text-align: center;
+    flex-direction: column;
+    gap: 1.875rem;
+    font-size: 1.1625rem;
   }
   footer img {
     width: 5vh;
