--- a/scss/layout/_mediaQ1024px.scss
+++ b/scss/layout/_mediaQ1024px.scss
@@ -20,4 +20,12 @@ footer{
         width: 5vh;
     }
 }
+.productos{
+    p{
+        font-size: 1.3rem;
+    }
+        img{
+            width: 18vh;
+    }
+}
 }
