--- a/scss/layout/_mediaQ320px.scss
+++ b/scss/layout/_mediaQ320px.scss
@@ -80,4 +80,12 @@ footer{
         width: 5vh;
     }
 }
+.productos{
+    p{
+        font-size: .9375rem;
+    }
+        img{
+            width: 10vh;
+    }
+}
 }
