--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./layout/main";
 @import "./layout/banner1";
 @import "./layout/section1";
+@import "./layout/productos1";
 @import "./layout/banner2";
 @import "./layout/brands";
 @import "./layout/footer";
