--- a/scss/layout/_banner1.scss
+++ b/scss/layout/_banner1.scss
@@ -13,7 +13,13 @@
     border: solid 3px rgba(18, 0, 83, 0.651);
     border-radius: 30px;
     margin-top: 1.875rem;
+    transition-duration: 1s;
+    transition-timing-function: ease-out;
     img{
         width: 30vh;
     }
+}
+.banner1:hover{
+    transform: scale(1.01);
+
 }
