--- a/scss/layout/_mediaQ768px.scss
+++ b/scss/layout/_mediaQ768px.scss
@@ -39,4 +39,19 @@ footer{
         width: 5vh;
     }
 }
+.productos{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+    div{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+        img{
+            width: 15vh;
+    }
+}
 }
