--- a/scss/layout/_section1.scss
+++ b/scss/layout/_section1.scss
@@ -16,9 +16,15 @@
         color: white;
         font-size: 1.875rem;
         font-weight: bold;
+        transition-duration: 1s;
+        transition-timing-function: ease-out;
+    }
+    article:hover{
+        transform: scale(1.1);
     }
     img{
         border-radius: 10px;
         overflow: hidden;
     }
+
 }
