--- a/scss/layout/_mediaQ320px.scss
+++ b/scss/layout/_mediaQ320px.scss
@@ -5,7 +5,11 @@
             justify-content: center;
             align-items: center;
             .nav{
-                gap: .0625rem;
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                line-height: 1rem;
+                padding: 10px;
                 a{
                     font-size: .75rem;
                 }
