--- a/scss/layout/_mediaQ320px.scss
+++ b/scss/layout/_mediaQ320px.scss
@@ -1,15 +1,14 @@
 @media all and (max-width: 425px){
     header{
         div{
-            flex-direction: column;
-            justify-content: center;
+            flex-direction: row;
+            justify-content: stretch;
             align-items: center;
             .nav{
                 display: flex;
                 flex-direction: column;
                 text-align: center;
                 line-height: 1rem;
-                padding: 10px;
                 a{
                     font-size: .75rem;
                 }
@@ -17,28 +16,23 @@
         }
         font-size: .9375rem;
         input{
-            width: 10vh;
-        }
-        img{
-            width: 5vh;
+            display: none;
         }
 .logo{
     display: flex;
     justify-content: center;
+    translate: 220px -0px;
     width: 10vh;
+    position: absolute;
 }
 .icons{
     display: flex;
     flex-direction: row;
     text-align: center;
+    padding: 0;
     a{
         font-size: 12px;
         text-align: center;
-    }
-    img{
-        display: flex;
-        width: 3vh;
-        translate: 13px;
     }
 }
 }
