--- a/scss/layout/_mediaQ425px.scss
+++ b/scss/layout/_mediaQ425px.scss
@@ -1,17 +1,13 @@
 @media all and (max-width: 425px){
     header{
+        
         div{
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            .nav{
-                gap: .0625rem;
+            input{
+                display: none;
             }
-        }
-        
-        font-size: .9375rem;
-        input{
-            width: 10vh;
         }
         img{
             width: 5vh;
@@ -24,17 +20,12 @@
 .icons{
     display: flex;
     flex-direction: row;
-    text-align: center;
-    a{
-        font-size: 12px;
-        text-align: center;
-    }
+    gap: 10px;
     img{
-        display: flex;
-        width: 3vh;
-        translate: 13px;
+        width:4vh;
     }
 }
+
 }
 .title{
     display: flex;
