--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header {
   margin-bottom: 1.875rem;
   border-bottom: solid 2px rgba(11, 11, 143, 0.13);
   z-index: 1000;
+  box-shadow: 0px 10px 15px rgba(53, 172, 180, 0.74);
 }
 header div {
   padding: 0.625rem;
@@ -57,8 +58,10 @@ header div nav ul a:hover {
 }
 
 .active {
-  color: rgb(99, 99, 126);
+  background-color: rgba(255, 255, 0, 0.11);
+  color: rgb(214, 216, 98);
   font-weight: bold;
+  border-radius: 10%;
 }
 
 .title {
@@ -75,7 +78,6 @@ header div nav ul a:hover {
   justify-content: space-evenly;
   align-items: center;
   color: white;
-  font-family: "Bebas Neue", sans-serif;
   font-size: 3.75rem;
   font-weight: bolder;
   padding: 2.5rem;
@@ -91,6 +93,25 @@ header div nav ul a:hover {
 
 .banner1:hover {
   transform: scale(1.01);
+}
+
+.bannercat {
+  width: 60%;
+  height: 30vh;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Bebas Neue", sans-serif;
+  background-image: url(../../assets/img/photo-1573865526739-10659fec78a5.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 3rem;
+  color: white;
+  font-weight: bold;
+  border: solid 3px rgba(0, 0, 105, 0.699);
+  border-radius: 20px;
 }
 
 .section1 {
@@ -223,6 +244,8 @@ header div nav ul a:hover {
 }
 
 footer {
+  width: 100%;
+  bottom: 0;
   display: flex;
   justify-content: space-around;
   padding: 1.25rem 0.625rem;
