--- a/scss/layout/_banner1.scss
+++ b/scss/layout/_banner1.scss
@@ -6,7 +6,7 @@
     justify-content: space-evenly;
     align-items: center;
     color: white;
-    font-family:'Bebas Neue', sans-serif;
+
     font-size: 3.75rem;
     font-weight: bolder;
     padding: 2.5rem;
@@ -22,4 +22,22 @@
 .banner1:hover{
     transform: scale(1.01);
 
+}
+.bannercat{
+    width: 60%;
+    height: 30vh;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:'Bebas Neue', sans-serif;
+    background-image: url(../../assets/img/photo-1573865526739-10659fec78a5.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 3rem;
+    color: white;
+    font-weight: bold;
+    border: solid 3px rgba(0, 0, 105, 0.699);
+    border-radius: 20px;
 }
