--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,6 +4,7 @@ header{
     margin-bottom: 1.875rem;
     border-bottom: solid 2px rgba(11, 11, 143, 0.13);
     z-index: 1000;
+    box-shadow: 0px 10px 15px rgba(53, 172, 180, 0.74);
     div{
     padding: .625rem;
     display:flex;
@@ -47,7 +48,9 @@ header{
 }
 
 .active{
-    color: rgb(99, 99, 126);
+    background-color: rgba(255, 255, 0, 0.11);
+    color: rgb(214, 216, 98);
     font-weight: bold;
+    border-radius: 10%;
 }
 
