--- a/scss/layout/_banner1.scss
+++ b/scss/layout/_banner1.scss
@@ -9,6 +9,7 @@
 
     font-size: 3.75rem;
     font-weight: bolder;
+    font-family: 'Bebas Neue', sans-serif;
     padding: 2.5rem;
     border: solid 3px rgba(18, 0, 83, 0.651);
     border-radius: 30px;
