--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@
 @import "./layout/body";
 @import "./layout/header";
 @import "./layout/main";
+@import "./layout/cart";
+@import "./layout/medios";
 @import "./layout/banner1";
 @import "./layout/section1";
 @import "./layout/productos1";
