--- a/scss/global/reset.scss
+++ b/scss/global/reset.scss
@@ -4,4 +4,4 @@
     box-sizing: 0;
 }
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap');
