--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,8 @@
 .title{
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 6rem;
+    font-family: 'Rubik Bubbles', sans-serif;
+    font-size: 5rem;
     font-weight: bold;
+    letter-spacing: 5px;
 }
 
 
