--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,8 +7,13 @@
 @import "./layout/cart";
 @import "./layout/medios";
 @import "./layout/banner1";
+@import "./layout/category-banner-dog";
+@import "./layout/category-banner-puppy";
+@import "./layout/category-banner-cat";
+@import "./layout/category-banner-chicken";
 @import "./layout/section1";
 @import "./layout/productos1";
+@import "./layout/productos-sell";
 @import "./layout/banner2";
 @import "./layout/brands";
 @import "./layout/footer";
