mejoras en el responsive

--- a/scss/layout/_category-banner-cat.scss
+++ b/scss/layout/_category-banner-cat.scss
@@ -1,5 +1,5 @@
 .category-banner-cat{
-        background-image: url(../../assets/img/bannercat.jpg);
+        background-image: url(../assets/img/bannercat.jpg);
         background-position: center;
         background-size: cover;
         width: 60%;
@@ -7,6 +7,7 @@
         margin: auto;
         display: flex;
         align-items: center;
+        text-align: center;
         font-size: 3.75rem;
         font-family: 'Bebas Neue', sans-serif;
         font-weight: bolder;
