--- a/scss/layout/_category-banner-chicken.scss
+++ b/scss/layout/_category-banner-chicken.scss
@@ -1,5 +1,5 @@
 .category-banner-chicken{
-        background-image: url(../../assets/img/bannerchicken.jpg);
+        background-image: url(../assets/img/bannerchicken.jpg);
         background-position: center;
         background-size: cover;
         width: 60%;
