--- a/scss/layout/_mediaQ320px.scss
+++ b/scss/layout/_mediaQ320px.scss
@@ -33,6 +33,10 @@
         width: 10vh;
     }
 }
+.category-banner-dog{
+    justify-content: center;
+}
+
 .section1{
     flex-wrap: wrap;
     article{
