--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,5 +21,6 @@
 @import "./layout/mediaQ1024px";
 @import "./layout/mediaQ768px";
 @import "./layout/mediaQ425px";
+@import "./layout/mediaQ375px";
 @import "./layout/mediaQ320px";
 @import "./layout/mediaQ178px";
