--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,21 @@ header div nav ul a:hover {
   font-size: 5rem;
   font-weight: bold;
   letter-spacing: 5px;
+  animation: tracking-out-contract 0.7s cubic-bezier(0.55, 0.085, 0.68, 0.53) 555ms reverse both;
 }
 
+@keyframes tracking-out-contract {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+}
 .cart {
   text-align: center;
   padding: 10px;
@@ -136,13 +149,14 @@ header div nav ul a:hover {
 }
 
 .category-banner-dog {
-  background-image: url(../../assets/img/bannerdog.jpg);
+  background-image: url(../assets/img/bannerdog.jpg);
   background-position: center;
   background-size: cover;
   width: 60%;
   height: 30vh;
   margin: auto;
   display: flex;
+  justify-content: center;
   align-items: center;
   font-size: 3.75rem;
   font-family: "Bebas Neue", sans-serif;
@@ -161,14 +175,16 @@ header div nav ul a:hover {
 }
 
 .category-banner-puppy {
-  background-image: url(../../assets/img/bannerpuppy.jpg);
+  background-image: url(../assets/img/bannerpuppy.jpg);
   background-position: center;
   background-size: cover;
   width: 60%;
   height: 30vh;
   margin: auto;
   display: flex;
+  justify-content: center;
   align-items: center;
+  text-align: center;
   font-size: 3.75rem;
   font-family: "Bebas Neue", sans-serif;
   font-weight: bolder;
@@ -186,7 +202,7 @@ header div nav ul a:hover {
 }
 
 .category-banner-cat {
-  background-image: url(../../assets/img/bannercat.jpg);
+  background-image: url(../assets/img/bannercat.jpg);
   background-position: center;
   background-size: cover;
   width: 60%;
@@ -194,6 +210,7 @@ header div nav ul a:hover {
   margin: auto;
   display: flex;
   align-items: center;
+  text-align: center;
   font-size: 3.75rem;
   font-family: "Bebas Neue", sans-serif;
   font-weight: bolder;
@@ -211,7 +228,7 @@ header div nav ul a:hover {
 }
 
 .category-banner-chicken {
-  background-image: url(../../assets/img/bannerchicken.jpg);
+  background-image: url(../assets/img/bannerchicken.jpg);
   background-position: center;
   background-size: cover;
   width: 60%;
@@ -461,12 +478,16 @@ footer div img:hover {
   header a {
     font-size: 1rem;
   }
+  header input {
+    width: 6vh;
+  }
   .banner1 {
+    width: 70%;
     height: 30vh;
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .banner1 img {
-    width: 22vh;
+    width: 20vh;
   }
   .brands {
     width: 70%;
@@ -492,24 +513,48 @@ footer div img:hover {
   header {
     font-size: 0.9375rem;
   }
+  header .nav {
+    gap: 0px;
+  }
+  header div {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   header input {
-    width: 7vh;
+    width: 15vh;
   }
   header img {
     width: 5vh;
   }
+  header .logo {
+    display: flex;
+    justify-content: center;
+    width: 10vh;
+  }
+  header .icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  header .icons img {
+    width: 4vh;
+  }
   .title {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .banner1 {
+    flex-direction: column;
+    text-align: center;
     width: 70%;
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .banner1 img {
-    width: 18vh;
+    width: 15vh;
   }
   .section1 article {
-    font-size: 25px;
+    font-size: 15px;
+    font-weight: normal;
   }
   .banner2 {
     width: 70%;
@@ -544,13 +589,14 @@ footer div img:hover {
   }
 }
 @media all and (max-width: 425px) {
+  header .nav {
+    gap: 0px;
+    font-size: 10px;
+  }
   header div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-  header div input {
-    display: none;
   }
   header img {
     width: 5vh;
@@ -583,6 +629,18 @@ footer div img:hover {
   .banner1 img {
     width: 16vh;
   }
+  .category-banner-dog {
+    width: 90%;
+  }
+  .category-banner-puppy {
+    width: 90%;
+  }
+  .category-banner-chicken {
+    width: 90%;
+  }
+  .category-banner-cat {
+    width: 90%;
+  }
   .section1 {
     flex-wrap: wrap;
   }
@@ -608,6 +666,43 @@ footer div img:hover {
   }
   footer img {
     width: 5vh;
+  }
+}
+@media all and (max-width: 375px) {
+  header {
+    flex-direction: row;
+  }
+  header .nav {
+    gap: 0;
+  }
+  header .nav a {
+    font-size: 1rem;
+    padding: 0.125rem;
+  }
+  header .icons {
+    padding: 0;
+  }
+  header .icons a {
+    font-size: 10px;
+  }
+  header .icons img {
+    width: 3vh;
+  }
+  header input {
+    font-size: 0.75rem;
+    height: 1vh;
+    width: 8vh;
+  }
+  .title {
+    font-size: 1.625rem;
+  }
+  .banner1 {
+    width: 90%;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+  .banner1 img {
+    width: 10vh;
   }
 }
 @media all and (max-width: 320px) {
@@ -644,6 +739,9 @@ footer div img:hover {
   }
   .banner1 img {
     width: 10vh;
+  }
+  .category-banner-dog {
+    justify-content: center;
   }
   .section1 {
     flex-wrap: wrap;
