--- a/scss/layout/_mediaQ1024px.scss
+++ b/scss/layout/_mediaQ1024px.scss
@@ -3,12 +3,16 @@
         a{
             font-size: 1rem;
         }
+        input{
+            width: 6vh;
+        }
 }
 .banner1{
+    width: 70%;
     height: 30vh;
-    font-size: 3rem;
+    font-size: 2.5rem;
     img{
-        width: 22vh;
+        width: 20vh;
     }
 }
 .brands{
