--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,25 @@ footer div img:hover {
   .productos img {
     width: 15vh;
   }
+  .productos-sell {
+    flex-direction: column;
+    align-items: center;
+  }
+  .productos-sell div:nth-child(2) {
+    width: 80%;
+  }
+  .productos-sell h1 {
+    display: flex;
+    justify-content: center;
+  }
+  .productos-sell h2 {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+  }
+  .productos-sell p:nth-child(2) {
+    display: none;
+  }
 }
 @media all and (max-width: 425px) {
   header .nav {
@@ -666,6 +685,9 @@ footer div img:hover {
   }
   footer img {
     width: 5vh;
+  }
+  .productos-sell div:nth-child(2) {
+    width: 80%;
   }
 }
 @media all and (max-width: 375px) {
