--- a/css/style.css
+++ b/css/style.css
@@ -607,6 +607,89 @@ footer div img:hover {
     display: none;
   }
 }
+@media all and (max-width: 580px) {
+  header .nav {
+    gap: 0px;
+    font-size: 10px;
+  }
+  header div {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  header img {
+    width: 5vh;
+  }
+  header .logo {
+    display: flex;
+    justify-content: center;
+    width: 10vh;
+  }
+  header .icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  header .icons img {
+    width: 4vh;
+  }
+  .title {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 2rem;
+    text-align: center;
+    line-height: 3.3125rem;
+  }
+  .banner1 {
+    width: 90%;
+    font-size: 2.1rem;
+    line-height: 2.1876rem;
+  }
+  .banner1 img {
+    width: 16vh;
+  }
+  .category-banner-dog {
+    width: 90%;
+  }
+  .category-banner-puppy {
+    width: 90%;
+  }
+  .category-banner-chicken {
+    width: 90%;
+  }
+  .category-banner-cat {
+    width: 90%;
+  }
+  .section1 {
+    flex-wrap: wrap;
+  }
+  .section1 article {
+    width: 10vh;
+    font-size: 1.25rem;
+  }
+  .banner2 {
+    width: 90%;
+    font-size: 2.5rem;
+    gap: 10px;
+  }
+  .brands {
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2, 4fr);
+  }
+  footer {
+    text-align: center;
+    flex-direction: column;
+    gap: 1.875rem;
+    font-size: 1.5625rem;
+  }
+  footer img {
+    width: 5vh;
+  }
+  .productos-sell div:nth-child(2) {
+    width: 80%;
+  }
+}
 @media all and (max-width: 425px) {
   header .nav {
     gap: 0px;
