--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@
 
 @import "./layout/mediaQ1024px";
 @import "./layout/mediaQ768px";
+@import "./layout/mediaQ500px";
 @import "./layout/mediaQ425px";
 @import "./layout/mediaQ375px";
 @import "./layout/mediaQ320px";
