--- a/scss/layout/_mediaQ320px.scss
+++ b/scss/layout/_mediaQ320px.scss
@@ -72,4 +72,12 @@ footer{
             width: 10vh;
     }
 }
+.medios2{
+    div{
+        justify-content: center;
+        width: 7vh;
+        border: red solid 3px;
+    }
 }
+}
+
